# hnsw-jni

./: .gitignore  CMakeLists.txt  README.md  build.gradle  build.sh  cmake-unix.sh  run-bench.sh  run-tests.sh  settings.gradle  tests_knn.sh
scripts/: jmh.sh  presubmit.sh
src/javacpp/java/com/criteo/hnsw/: HnswLibConfig.java
src/jmh/java/com/criteo/hnsw/: BaseBench.java  BruteKnn.java  Fetch.java  HnswBruteKnn.java  HnswKnn.java  Math.java
src/main/cpp/: bruteforce.h  decoder_f16.h  encoding.h  float16.h  float8.h  hnswLibJni.cpp  hnswLibJni.h  hnswalg.h  hnswindex.h  hnswjava_api.h  hnswlib.h  mathlib.h  mathlib_jni.cpp  space_ip.h  space_ip_f16.h  space_ip_train.h  space_kendall.h  space_l2.h  space_l2_f16.h  space_l2_train.h
src/main/java/com/criteo/hnsw/: ByteBufWrapper.java  Decoder.java  FloatByteBuf.java  HelloHnsw.java  HelloHnswWrapped.java  HnswIndex.java  HnswIndexWrapped.java  HnswLib.java  KnnResult.java  LongByteBuf.java  MathLib.java  Metrics.java  NativeUtils.java  Precision.java
src/test/cpp/: common.h  float8_test.cpp  knn_distance_test.cpp  knn_index_test.cpp  knn_search_test.cpp
src/test/java/com/criteo/hnsw/: FloatByteBufTest.java  HnswLibTests.java  HnswNativeLoadTest.java  LongByteBufTest.java  MathLibTest.java
